--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,6 +1,9 @@
 <div>
   <h1 class="text-4xl text-green-700 font-semibold underline">Static#home</h1>
   <p>Find me in app/views/static/home.html.erb</p>
+  <% if user_signed_in? %>
+    <%= link_to 'ログアウトする', destroy_user_session_path, data: { turbo_method: :delete } %>
+  <% end %>
 </div>
 
 <button class="btn" onclick="my_modal_1.showModal()">open modal</button>
