--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,7 @@
         <%= render 'layouts/header' %>
       </header>
       <main class="flex-grow">
-        <% flash.each do |message_type, message| %>
-          <% if flash[:alert] %>
-            <div class="alert alert-warning"><%= message %></div>
-          <% else %>
-            <div class="alert alert-<%= message_type %>"><%= message %></div>
-          <% end %>
-        <% end %>
+        <%= render 'shared/flash_message' %>
         <%= yield %>
       </main>
       <footer class="footer bg-[#A6ABBD] text-[#424656] items-center p-4 sticky bottom-0">
