--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,34 @@
 
 <div class="container mx-auto w-[540px] px-10 py-5">
-  <h1 class="text-5xl font-bold text-center mb-10">新規登録</h1>
+  <h1 class="text-5xl font-bold text-center mb-10"><%= t('devise.registrations.new.title') %></h1>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="field">
       <%= f.label :account %><br />
-      <%= f.text_field :account, autofocus: true, autocomplete: "account", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: "半角英数4文字以上" %>
+      <%= f.text_field :account, autofocus: true, autocomplete: "account", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.account_validate') %>
     </div>
     <div class="field">
       <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: "10文字以下" %>
+      <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.maximum_name_length') %>
     </div>
     <div class="field">
       <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: "メールアドレスを入力" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.input_email') %>
     </div>
 
     <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: "6文字以上" %>
+      <%= f.label :password %><br />
+      <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.minimum_password_length', password_length: @minimum_password_length) %>
     </div>
 
     <div class="field">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: "パスワードをもう一度入力" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.re_input_password') %>
     </div>
 
     <div class="actions">
-      <%= f.submit "登録する", class: "btn btn-secondary mb-6 w-full mx-auto mt-2" %>
+      <%= f.submit t('devise.registrations.new.create'), class: "btn btn-secondary mb-6 w-full mx-auto mt-2" %>
     </div>
   <% end %>
 
