--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "ログインはこちら", new_session_path(resource_name), class: "link text-[#3F51B5]" %><br />
+  <%= link_to t('devise.shared.links.sign_in'), new_session_path(resource_name), class: "link text-[#3F51B5]" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "初めてご利用の方はこちら", new_registration_path(resource_name), class: "link text-[#3F51B5]" %><br />
+  <%= link_to t('devise.shared.links.sign_up'), new_registration_path(resource_name), class: "link text-[#3F51B5]" %><br />
 <% end %>
 <!-- パスワードリセット機能は本リリース時実装予定
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
