--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1">
-      <li><%= link_to 'ログイン', user_session_path %></li><span class="w-[1px] bg-black"></span><li><%= link_to '新規登録', new_user_registration_path %></li>
+      <li><%= link_to t('header.sign_in'), user_session_path %></li><span class="w-[1px] bg-black"></span><li><%= link_to t('header.to_register_page'), new_user_registration_path %></li>
     </ul>
   </div>
 </div>
