--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,34 @@
     <% end %>
   </div>
   <div class="flex-none">
-    <ul class="menu menu-horizontal px-1">
-      <li><%= link_to t('header.sign_in'), user_session_path %></li><span class="w-[1px] bg-black mx-2"></span><li><%= link_to t('header.to_register_page'), new_user_registration_path %></li>
+    <ul class="menu menu-horizontal px-1 flex justify-center items-center gap-1 mx-4">
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to "#", class: "btn btn-secondary" do %>
+            <i class="fa-solid fa-pen-to-square"></i>
+            <span><%= t('header.post') %></span>
+          <% end %>
+        </li>
+        <details class="dropdown dropdown-end">
+          <summary class="btn btn-ghost m-1">
+            <div class="avatar">
+              <div class="w-12 rounded-full">
+                <%= image_tag 'kkrn_icon_user_1.png' %>
+              </div>
+            </div>
+            <%= current_user.name %>
+          </summary>
+          <ul class="menu dropdown-content bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
+            <li><%= link_to t('header.mypage'), "#" %></li>
+            <li><%= link_to t('header.notification'), "#" %></li>
+            <li><%= link_to t('header.sign_out'), destroy_user_session_path, data: { turbo_method: :delete } %></li>
+          </ul>
+        </details>
+      <% else %>
+        <li><%= link_to t('header.sign_in'), user_session_path %></li>
+        <span class="w-[1px] bg-black mx-2"></span>
+        <li><%= link_to t('header.to_register_page'), new_user_registration_path %></li>
+      <% end %>
     </ul>
   </div>
 </div>
