--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
             <%= current_user.name %>
           </summary>
           <ul class="menu dropdown-content bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
-            <li><%= link_to t('header.mypage'), "#" %></li>
+            <li><%= link_to t('header.mypage'), user_path(current_user) %></li>
             <li><%= link_to t('header.notification'), "#" %></li>
             <li><%= link_to t('header.sign_out'), destroy_user_session_path, data: { turbo_method: :delete } %></li>
           </ul>
