--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,18 @@
-<div>
-  <h1 class="font-bold text-4xl">Users#show</h1>
-  <p>Find me in app/views/users/show.html.erb</p>
+<div class="container mx-auto w-full px-10 py-10">
+  <div class="flex justify-center items-center gap-10 my-2">
+    <div>
+      <div class="bg-white w-[187px] rounded-full mx-10"><%= image_tag 'kkrn_icon_user_1.png' %> </div>
+    </div>
+    <div>
+      <p class="text-[36px] mx-10"><%= current_user.name %></p>
+    </div>
+  </div>
+  <div>
+    <div class="w-full mx-auto">
+      <p class="text-[36px] mx-10 text-center">投稿一覧</p>
+    </div>
+    <div class="w-full mx-auto">
+      <p class="mx-10">投稿がありません</p>
+    </div>
+  </div>
 </div>
