--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,10 +9,10 @@
   </div>
   <div>
     <div class="w-full mx-auto">
-      <p class="text-[36px] mx-10 text-center">投稿一覧</p>
+      <p class="text-[36px] mx-10 text-center"><%= t('users.show.current_user_reviews') %></p>
     </div>
     <div class="w-full mx-auto">
-      <p class="mx-10">投稿がありません</p>
+      <p class="mx-10"><%= t('users.show.review_not_found') %></p>
     </div>
   </div>
 </div>
