--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Reviews#new</h1>
   <p>Find me in app/views/reviews/new.html.erb</p>
+  <%= render 'form', review: @review %>
 </div>
