--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,7 @@
-<div>
-  <h1 class="font-bold text-4xl">Reviews#new</h1>
-  <p>Find me in app/views/reviews/new.html.erb</p>
+<div class="container mx-auto w-[540px] px-10 py-5">
+  <h1 class="text-5xl font-bold text-center mb-10">新規投稿</h1>
   <%= render 'form', review: @review %>
+  <div class="text-center mt-10">
+    <%= link_to "前のページに戻る", :back, class: "btn btn-outline btn-primary" %>
+  </div>
 </div>
