--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
     <ul class="menu menu-horizontal px-1 flex justify-center items-center gap-1 mx-4">
       <% if user_signed_in? %>
         <li>
-          <%= link_to "#", class: "btn btn-secondary" do %>
+          <%= link_to new_review_path, class: "btn btn-secondary" do %>
             <i class="fa-solid fa-pen-to-square"></i>
             <span><%= t('header.post') %></span>
           <% end %>
