--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,34 +1,34 @@
 <%= form_with(model: review, class: "w-full max-w-lg") do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
-  <div class="flex flex-wrap -mx-3 mb-6">
+  <div class="flex flex-wrap -mx-3 mb-4">
     <div class="w-full px-3">
       <%= f.label :title, class: "px-3" %>
-      <%= f.text_field :title, class: "input input-bordered form-control mb-6 w-full mx-auto" %>
+      <%= f.text_field :title, class: "input input-bordered form-control w-full mx-auto pl-2 text-base" %>
     </div>
   </div>
-  <div class="flex flex-wrap -mx-3 mb-6">
+  <div class="flex flex-wrap -mx-3 mb-4">
     <div class="w-full px-3">
       <%= f.label :body, class: "px-3" %>
-      <%= f.text_area :body, class: "textarea textarea-bordered textarea-lg form-control mb-6 w-full mx-auto" %>
+      <%= f.text_area :body, class: "textarea textarea-bordered textarea-lg resize-none form-control h-[200px] w-full mx-auto pl-2 pt-1 text-base" %>
     </div>
   </div>
-  <div class="flex flex-wrap -mx-3 mb-6">
+  <div class="flex flex-wrap -mx-3 mb-4">
     <div class="w-full px-3">
       <%= f.label :product_name, class: "px-3" %>
-      <%= text_field_tag :product_name, @review.product&.name, class: "input input-bordered form-control mb-2 w-full mx-auto" %>
+      <%= text_field_tag :product_name, @review.product&.name, class: "input input-bordered form-control mb-2 w-full mx-auto pl-2 text-base" %>
     </div>
     <div class="w-full px-3">
       <%= link_to t('reviews.new.select_product'), "#", class: "btn btn-primary w-full mx-auto" %>
     </div>
   </div>
-  <div class="flex flex-wrap -mx-3 mb-6">
+  <div class="flex flex-wrap -mx-3 mb-4">
     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
       <%= f.label :paper, class: "px-3" %>
-      <%= f.text_field :paper, class: "input input-bordered form-control mb-6 w-full mx-auto" %>
+      <%= f.text_field :paper, class: "input input-bordered form-control mb-6 w-full mx-auto pl-2 text-base" %>
     </div>
     <div class="w-full md:w-1/2 px-3">
       <%= f.label :pen, class: "px-3" %>
-      <%= f.text_field :pen, class: "input input-bordered form-control mb-6 w-full mx-auto" %>
+      <%= f.text_field :pen, class: "input input-bordered form-control mb-6 w-full mx-auto pl-2 text-base" %>
     </div>
   </div>
   <%= f.submit nil, class: "btn btn-secondary w-full mx-auto mt-2" %>
