--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,13 @@
-<div>
-  <h1 class="font-bold text-4xl">Products#index</h1>
-  <p>Find me in app/views/products/index.html.erb</p>
-</div>
+<%= render "shared/remote_modal", title: "インクを探す" do %>
+  <div class="container mx-auto w-[540px] px-10 py-5">
+    <% if @products.present? %>
+      <% @products.each do |product| %>
+        <%= product.name %>
+        <%= product.brand.name %>
+        <%= product.category.color %>
+      <% end %>
+    <% else %>
+      インクが登録されていません
+    <% end %>
+  </div>
+<% end %>
