--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,5 @@
-<div>
-  <h1 class="font-bold text-4xl">Products#new</h1>
-  <p>Find me in app/views/products/new.html.erb</p>
-</div>
+<%= render "shared/remote_modal", title: t('product.new.title') do %>
+  <div class="container mx-auto w-[540px] px-10 py-5">
+    <%= render 'form', product: @product %>
+  </div>
+<% end %>
