--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -18,7 +18,7 @@
       <%= text_field_tag :product_name, @review.product&.name, class: "input input-bordered form-control mb-2 w-full mx-auto pl-2 text-base" %>
     </div>
     <div class="w-full px-3">
-      <%= link_to t('reviews.new.select_product'), "#", class: "btn btn-primary w-full mx-auto" %>
+      <%= link_to t('reviews.new.select_product'), new_product_path, class: "btn btn-primary w-full mx-auto", data: { turbo_frame: 'remote_modal' } %>
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-4">
@@ -33,3 +33,4 @@
   </div>
   <%= f.submit nil, class: "btn btn-secondary w-full mx-auto mt-2" %>
 <% end %>
+<%= turbo_frame_tag "remote_modal" %>
