--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,7 +1,7 @@
-<div class="container mx-auto w-[540px] px-10 py-5">
+<div class="container mx-auto w-full px-10 py-5">
   <h1 class="text-5xl font-bold text-center mb-10">レビュー一覧</h1>
 
-  <div class="grid grid-cols-2 gap-4">
+  <div class="flex flex-wrap justify-center items-center p-5 gap-5">
     <% if @reviews.present? %>
       <%= render @reviews %>
     <% else %>
