--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <h1 class="text-5xl font-bold text-center mb-10 tracking-wider">レビューを見る</h1>
-  <div class="grid grid-cols-2 gap-4">
+  <div class="flex flex-wrap justify-center items-center p-5 gap-5">
     <% if @reviews.present? %>
       <%= render partial: 'reviews/review', collection: @reviews %>
     <% else %>
