--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -14,7 +14,7 @@
   </div>
   <div class="flex flex-wrap -mx-3 mb-4">
     <div class="w-full px-3">
-      <%= f.collection_select(:category_id, Category.all, :id, :color, {include_blank: "色系統を選択"}, {class: "select select-bordered w-40 max-w-xs"}) %>
+      <%= f.collection_select(:category_id, Category.all, :id, :color, {include_blank: t('category.select.include_blank')}, {class: "select select-bordered w-40 max-w-xs"}) %>
     </div>
   </div>
   <%= f.submit nil, class: "btn btn-secondary w-full mx-auto mt-2" %>
