--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -4,7 +4,7 @@
     <h2 class="card-title"><%= product.name %></h2>
     <form method="dialog">
       <div class="card-actions justify-end">
-        <button class="btn btn-primary" data-action="click->product#select" data-name="<%= product.name %>">このインクを選択</button>
+        <button class="btn btn-primary" data-action="click->product#select" data-name="<%= product.name %>"><%= t('product.index.select_product') %></button>
       </div>
     </form>
   </div>
