--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container mx-auto w-[540px] px-10 py-5">
-  <h1 class="text-5xl font-bold text-center mb-10">新規投稿</h1>
+  <h1 class="text-5xl font-bold text-center mb-10"><%= t('reviews.new.title') %></h1>
   <%= render 'form', review: @review %>
   <div class="text-center mt-10">
-    <%= link_to "前のページに戻る", :back, class: "btn btn-outline btn-primary" %>
+    <%= link_to t('helpers.links.back'), :back, class: "btn btn-outline btn-primary" %>
   </div>
 </div>
