--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -22,7 +22,7 @@
     <div class="text-xs text-[#959595]"><%= review.paper %></div>
     <div class="text-xs text-[#959595]"><%= review.pen %></div>
     <div class="card-actions justify-end">
-      <%= link_to t('reviews.index.show_review'), "#", class: "btn btn-sm btn-primary" %>
+      <%= link_to t('reviews.index.show_review'), review_path(review), class: "btn btn-sm btn-primary" %>
     </div>
   </div>
 </div>
