--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -14,8 +14,8 @@
         <p class="leading-relaxed whitespace-pre-wrap"><%= @review.body %></p>
         <div class="mt-6 items-center pb-5 border-t-2 border-gray-100 mb-5">
           <p><%= link_to @review.product.brand.name, "#", class: "link text-[#3F51B5]" %></p>
-          <p>使った紙：<%= @review.paper %></p>
-          <p>使ったペン：<%= @review.pen %></p>
+          <p><%= t('reviews.show.using_paper') %><%= @review.paper %></p>
+          <p><%= t('reviews.show.using_pen') %><%= @review.pen %></p>
         </div>
       </div>
     </div>
