--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -9,6 +9,12 @@
     </div>
     <div class="flex flex-wrap -mx-3 mb-4">
       <div class="w-full px-3">
+        <%= f.label :images, class: "px-3" %>
+        <%= f.file_field :images, accept: "image/jpeg,image/png", class: "file-input file-input-bordered w-full mx-auto", multiple: true %>
+      </div>
+    </div>
+    <div class="flex flex-wrap -mx-3 mb-4">
+      <div class="w-full px-3">
         <%= f.label :body, class: "px-3" %>
         <%= f.text_area :body, class: "textarea textarea-bordered textarea-lg resize-none form-control h-[200px] w-full mx-auto pl-2 pt-1 text-base" %>
       </div>
