--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -10,7 +10,7 @@
     <div class="flex flex-wrap -mx-3 mb-4">
       <div class="w-full px-3">
         <%= f.label :images, class: "px-3" %>
-        <%= f.file_field :images, accept: "image/jpeg,image/png", class: "file-input file-input-bordered w-full mx-auto", multiple: true %>
+        <%= f.file_field :images, class: "file-input file-input-bordered w-full mx-auto", multiple: true %>
       </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-4">
