--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto w-[540px] px-10 py-5">
   <h1 class="text-5xl font-bold text-center mb-10">投稿の編集</h1>
-  <%= render 'form', review: @review %>
+  <%= render 'form', review: @review, images: @review.reload.images %>
   <div class="text-center mt-10">
     <%= link_to t('helpers.links.back'), :back, class: "btn btn-outline btn-primary" %>
   </div>
