--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -9,8 +9,8 @@
     </div>
     <div class="flex flex-wrap -mx-3 mb-4">
       <div class="w-full px-3">
-        <%= f.label :images, class: "px-3" %>
-        <%= f.file_field :images, accept: "image/jpeg,image/png", class: "file-input file-input-bordered w-full mx-auto", multiple: true %>
+        <%= f.label :images, class: "px-3" %><%= t('reviews.form.number_of_images') %>
+        <%= f.file_field :images, accept: "image/jpeg,image/png", class: "file-input file-input-bordered w-full mx-auto", multiple: true, include_hidden: false %>
         <% if @review.images.attached? %>
           <div class="flex mx-2 mt-2 gap-[24px]">
             <% @review.images.each do |image| %>
@@ -32,7 +32,7 @@
         <%= f.text_field :product_name, value: @review.product&.name, class: "input input-bordered form-control mb-2 w-full mx-auto pl-2 text-base", data: { product_target: "name" } %>
       </div>
       <div class="w-full px-3">
-        <%= link_to t('reviews.new.select_product'), products_path, class: "btn btn-primary w-full mx-auto", data: { turbo_frame: "remote_modal" } %>
+        <%= link_to t('reviews.form.select_product'), products_path, class: "btn btn-primary w-full mx-auto", data: { turbo_frame: "remote_modal" } %>
       </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-4">
