add: 投稿の削除機能を追加

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -43,7 +43,7 @@
         <% if current_user == @review.user %>
           <div class="flex items-center justify-center gap-4">
             <%= link_to "編集", edit_review_path, class: "btn btn-accent" %>
-            <%= link_to "削除", "#", class: "btn btn-error" %>
+            <%= link_to "削除", review_path(@review), class: "btn btn-error", data: { turbo_method: :delete, turbo_confirm: "削除しますか？" } %>
           </div>
         <% end %>
       </div>
