--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,15 @@
 <div class="navbar bg-base-100 border-b border-primary h-[70px]">
-  <div class="flex-1">
+  <div class="navbar-start">
     <%= link_to '/' do %>
       <%= image_tag 'logo_default3.png', class: 'h-[50px] w-[184px] object-contain' %>
     <% end %>
   </div>
-  <div class="flex-none">
-    <ul class="menu menu-horizontal px-1 flex justify-center items-center gap-1 mx-4">
-      <% if user_signed_in? %>
+  <div class="navbar-center">
+    <%= render 'shared/search_form', url: search_reviews_path %>
+  </div>
+  <div class="navbar-end">
+    <% if user_signed_in? %>
+      <ul class="menu menu-horizontal px-1 flex justify-center items-center gap-1 mx-4">
         <li>
           <%= link_to new_review_path, class: "btn btn-secondary" do %>
             <i class="fa-solid fa-pen-to-square"></i>
@@ -28,11 +31,13 @@
             <li><%= link_to t('header.sign_out'), destroy_user_session_path, data: { turbo_method: :delete } %></li>
           </ul>
         </details>
-      <% else %>
+      </ul>
+    <% else %>
+      <ul class="menu menu-horizontal px-1 flex justify-center gap-1 mx-4">
         <li><%= link_to t('header.sign_in'), user_session_path %></li>
         <span class="w-[1px] bg-black mx-2"></span>
         <li><%= link_to t('header.to_register_page'), new_user_registration_path %></li>
-      <% end %>
-    </ul>
+      </ul>
+    <% end %>
   </div>
 </div>
