add: 検索結果用ページ作成 #38

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -18,7 +18,7 @@
     </div>
     -->
   </div>
-  <div class="card-body gap-0 flex-shrink-0 w-[340px] px-4 py-4">
+  <div class="card-body gap-0 flex-shrink-0 w-[340px] p-4">
     <h2 class="card-title overflow-hidden mb-1 text-lg font-bold text-ellipsis whitespace-nowrap"><%= review.title %></h2>
     <div class="text-sm"><%= review.product.name %></div>
     <div class="text-sm"><%= review.product.brand.name %></div>
