--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,11 +1,17 @@
-<div class="card bg-base-100 w-96 shadow-xl">
+<div class="card bg-base-100 w-96 shadow">
   <div class="card-body">
     <p class="text-[#959595]"><%= product.brand.name %></p>
     <h2 class="card-title"><%= product.name %></h2>
-    <form method="dialog">
+    <% if request.path.include?("search") %>
       <div class="card-actions justify-end">
-        <button class="btn btn-primary" data-action="click->product#select" data-name="<%= product.name %>"><%= t('product.index.select_product') %></button>
+        <%= link_to "詳しく見る", product_path(product), class: "btn btn-sm btn-primary" %>
       </div>
-    </form>
+    <% else %>
+      <form method="dialog">
+        <div class="card-actions justify-end">
+          <button class="btn btn-primary" data-action="click->product#select" data-name="<%= product.name %>"><%= t('product.index.select_product') %></button>
+        </div>
+      </form>
+    <% end %>
   </div>
 </div>
