--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_with url: url, method: :get, local: true do |f| %>
-  <div class="flex">
+  <div class="flex gap-1">
+    <%= f.collection_select(:c, Category.all, :id, :color, {include_blank: t('category.select.include_blank')}, {class: "select select-bordered w-40 max-w-xs"}) %>
     <%= f.text_field :q, class: 'form-control input input-bordered w-full max-w-xs', placeholder: "キーワードで検索" %>
     <%= f.submit "検索", class: 'btn btn-primary' %>
   </div>
