--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with url: url, method: :get, local: true do |f| %>
   <div class="flex">
     <%= f.text_field :q, class: 'form-control input input-bordered w-full max-w-xs', placeholder: "キーワードで検索" %>
-    <%= f.submit "検索", class: 'btn btn-primary' %>
+    <%= f.submit t('search.submit'), class: 'btn btn-primary' %>
   </div>
 <% end %>
