--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -55,7 +55,7 @@
     </div>
   </div>
   <div class="text-center mt-5 mb-5">
-    <%= link_to t('helpers.links.back'), :back, class: "btn btn-outline btn-primary" %>
+    <%= link_to t('helpers.links.back'), 'javascript:history.back()', class: "btn btn-outline btn-primary" %>
   </div>
 </section>
 
