--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,6 +2,6 @@
   <h1 class="text-5xl font-bold text-center mb-10"><%= t('reviews.new.title') %></h1>
   <%= render 'form', review: @review %>
   <div class="text-center mt-10">
-    <%= link_to t('helpers.links.back'), :back, class: "btn btn-outline btn-primary" %>
+    <%= link_to t('helpers.links.back'), 'javascript:history.back()', class: "btn btn-outline btn-primary" %>
   </div>
 </div>
