update: フラッシュにStimulusを適用 #90

--- a/app/views/shared/_flash_message.html.erb
+++ b/app/views/shared/_flash_message.html.erb
@@ -1,15 +1,22 @@
-<% flash.each do |message_type, message| %>
-  <div role="alert" class="alert alert-<%= flash_type(message_type) %> w-1/2 mx-auto mt-2">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="h-6 w-6 shrink-0 stroke-current"
-      fill="none"
-      viewBox="0 0 24 24">
-    <path
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="<%= flash_path(message_type) %>" />
-    <span><%= message %></span>
-  </div>
-<% end %>
+<div class="flash" data-controller="flash">
+  <% flash.each do |message_type, message| %>
+    <div role="alert" class="alert alert-<%= flash_type(message_type) %> w-1/2 mx-auto mt-2">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6 shrink-0 stroke-current"
+        fill="none"
+        viewBox="0 0 24 24">
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="<%= flash_path(message_type) %>" />
+      <span><%= message %></span>
+      <span data-action="click->flash#remove">
+        <svg class="fill-current h-6 w-6 text-<%= flash_type(message_type) %>" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+        <title>Close</title>
+        <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+      </span>
+    </div>
+  <% end %>
+</div>
