--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -11,14 +11,16 @@
       </div>
     <% end %>
     <div class="card-actions justify-end mt-1">
-    <!-- いいね・ブックマーク機能実装後に使う部分
-      <i class="fa-regular fa-heart"></i>
-      <i class="fa-regular fa-bookmark"></i>
-      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-hashtags="インク沼" data-lang="ja" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    -->
-      <%= link_to "https://twitter.com/share?url=#{post_review_url(review)}&text=#{review.product.brand.name}%20#{review.product.name}をレビュー！%0a%0a%23インク沼%20%23INKLOG%0a", title: "Xでシェア" do %>
-        <i class="fa-brands fa-square-x-twitter text-[24px]"></i>
-      <% end %>
+      <div class="flex gap-2">
+      <!-- いいね・ブックマーク機能実装後に使う部分
+        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-bookmark"></i>
+      -->
+        <%= render "reviews/like_btn", review: review %>
+        <%= link_to "https://twitter.com/share?url=#{post_review_url(review)}&text=#{review.product.brand.name}%20#{review.product.name}をレビュー！%0a%0a%23インク沼%20%23INKLOG%0a", title: "Xでシェア" do %>
+          <i class="fa-brands fa-square-x-twitter text-[24px]"></i>
+        <% end %>
+      </div>
     </div>
   </div>
   <div class="card-body gap-0 flex-shrink-0 w-[340px] p-4">
