update: 旧サービス名が使用されている部分を新サービス名に差し替え

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,5 +5,5 @@
 </nav>
 
 <aside class="grid-flow-col items-center justify-self-end">
-    <p>© 2025 InkLog.</p>
+    <p>© 2025 iroGraphica.</p>
 </aside>
