update: ロゴを配置

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,9 +1,6 @@
 <div class="container mx-auto px-5 py-5">
   <div class="flex justify-center items-center h-[270px]">
-    <p class="text-9xl font-serif">iro<span class="text-[#9CACDC]">G</span>raphica</p>
-    <!-- ロゴを作り直したら再使用
-    <%= image_tag "banner5.png", class: "h-[270px] w-[720px] object-scale-down flex-1" %>
-    -->
+    <%= image_tag "irographica-biglogo.png", class: "h-[270px] w-[720px] object-cover flex-1" %>
     <div class="text-center text-2xl flex-1 tracking-wider">
       <p><%= simple_format(t('home.copywriting')) %></p>
     </div>
