--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,7 @@
 <div class="navbar bg-base-100 border-b border-primary h-[70px]">
   <div class="navbar-start">
     <%= link_to '/', class: "text-lg" do %>
-      iro<span class="text-[#9CACDC]">G</span>raphica
-      <!-- ロゴ作成後再使用
-      <%= image_tag 'logo_default3.png', class: 'h-[50px] w-[184px] object-contain' %>
-      <-->
+      <%= image_tag 'header_logo.png', class: 'h-[50px] w-[200px] object-cover' %>
     <% end %>
   </div>
   <div class="navbar-center">
