fix: 未使用リンクを非表示

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,9 @@
 <nav class="grid-flow-col gap-4">
   <%= link_to 'お問い合わせ', '#' %>
+  <!-- ページ作成後使用
   <%= link_to '利用規約', '#' %>
   <%= link_to 'プライバシーポリシー', '#' %>
+  -->
 </nav>
 
 <aside class="grid-flow-col items-center justify-self-end">
