update: お問い合わせリンク開通 #120

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <nav class="grid-flow-col gap-4">
-  <%= link_to 'お問い合わせ', '#' %>
+  <%= link_to 'お問い合わせ', contact_path %>
   <!-- ページ作成後使用
   <%= link_to '利用規約', '#' %>
   <%= link_to 'プライバシーポリシー', '#' %>
