--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -1,6 +1,10 @@
 <%= form_with url: url, method: :get, local: true do |f| %>
   <div class="flex gap-1">
-    <%= f.text_field :q, class: 'form-control input input-bordered w-full max-w-xs', placeholder: "キーワードで検索" %>
+    <div data-controller="autocomplete" data-autocomplete-min-length-value="3" data-autocomplete-url-value="<%= autocomplete_products_path %>" role="combobox">
+      <%= f.text_field :q, class: 'form-control input input-bordered w-full max-w-xs', data: { autocomplete_target: 'input' }, placeholder: 'キーワードで検索' %>
+      <%= f.hidden_field :id, data: { autocomplete_target: 'hidden' } %>
+      <ul class="list-group bg-base-100 absolute rounded-box z-[1] w-70 h-80 p-2 shadow overflow-y-auto overflow-x-hidden" data-autocomplete-target="results"></ul>
+    </div>
     <%= f.submit t('search.submit'), class: 'btn btn-primary' %>
   </div>
 <% end %>
