--- a/app/views/notifications/_followed.html.erb
+++ b/app/views/notifications/_followed.html.erb
@@ -8,7 +8,7 @@
       <% end %>
     <% end %>
     <div>
-      <%= notification.notifable.follower.name %>があなたをフォローしました。
+      <%= notification.notifable.follower.name %><%= t('notifications.followed') %>
     </div>
   </div>
 </div>
