--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <nav class="grid-flow-col gap-4">
   <%= link_to t('footer.contact'), contact_path %>
-  <%= link_to 'プライバシーポリシー', privacy_policy_path %>
+  <%= link_to t('footer.privacy_policy'), privacy_policy_path %>
   <!-- ページ作成後使用
   <%= link_to '利用規約', '#' %>
   -->
