--- a/app/views/layouts/_mobile_header.html.erb
+++ b/app/views/layouts/_mobile_header.html.erb
@@ -41,7 +41,7 @@
           </div>
           <div class="flex flex-col justify-center items-center mt-10 gap-2">
             <%= link_to t('footer.contact'), contact_path, data: { action: "slideover#close" } %>
-            <%= link_to 'プライバシーポリシー', privacy_policy_path, data: { action: "slideover#close" } %>
+            <%= link_to t('footer.privacy_policy'), privacy_policy_path, data: { action: "slideover#close" } %>
             <!-- ページ作成後使用
             <%= link_to '利用規約', '#' %>
             -->
