add: 利用規約ページのリンクを開通 #122

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,7 @@
 <nav class="grid-flow-col gap-4">
   <%= link_to t('footer.contact'), contact_path %>
+  <%= link_to '利用規約', term_path %>
   <%= link_to t('footer.privacy_policy'), privacy_policy_path %>
-  <!-- ページ作成後使用
-  <%= link_to '利用規約', '#' %>
-  -->
   <% if current_user&.admin? %>
     <%= link_to t('footer.admin'), admin_root_path %>
   <% end %>
