--- a/app/views/layouts/_mobile_header.html.erb
+++ b/app/views/layouts/_mobile_header.html.erb
@@ -43,7 +43,7 @@
             <%= link_to t('footer.contact'), contact_path, data: { action: "slideover#close" } %>
             <%= link_to t('footer.term'), term_path %>
             <%= link_to t('footer.privacy_policy'), privacy_policy_path, data: { action: "slideover#close" } %>
-            <%= link_to "iroGraphicaについて", guide_path, data: { action: "slideover#close" } %>
+            <%= link_to t('footer.guide'), guide_path, data: { action: "slideover#close" } %>
             <% if current_user&.admin? %>
               <%= link_to t('footer.admin'), admin_root_path, data: { action: "slideover#close" } %>
             <% end %>
